# metaplex-cli

./: Cargo.toml  README.md
.github/workflows/: build.yml
arload/: Cargo.toml  README.md
arload/src/: error.rs  lib.rs  main.rs  status.rs
arload/tests/: integration.rs
arload/tests/fixtures/: 1.json
arweave_rs/: Cargo.toml  README.md
arweave_rs/src/: crypto.rs  error.rs  lib.rs  merkle.rs  transaction.rs  utils.rs
arweave_rs/tests/: integration.rs
arweave_rs/tests/fixtures/: 0.json
metaplex_cli/: Cargo.toml  README.md
metaplex_cli/src/: main.rs  output.rs
src/: arweave.rs  lib.rs  main.rs  output.rs  storage.rs
src/arweave2/: crypto.rs  merkle.rs  mod.rs  transaction.rs
tests/fixtures/: 0.json
