[package]
name = "metaplex_cli"
authors = ["calebeverett <caleb@calebeverett.io>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CalebEverett/metaplex-cli"

[dependencies]
borsh = "0.9.1"
clap = "2.33.3"
console = "0.15.0"
futures = "0.3.17"
indicatif = "0.16.2"
log = "0.4.14"
metaplex-token-metadata = "0.0.1"
num-traits = "0.2.14"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
solana-account-decoder = "1.8.0"
solana-clap-utils = "1.8.0"
solana-cli-config = "1.8.0"
solana-cli-output = "1.8.0"
solana-client = "1.8.0"
solana-remote-wallet = "1.8.0"
solana-logger = "1.8.0"
solana-sdk = "1.8.0"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0.3"
spl-memo = { version = "3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.2.2"

