[package]
name = "arweave_rs"
authors = ["calebeverett <caleb@calebeverett.io>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CalebEverett/metaplex-cli"

[dependencies]
async-trait = "0.1.51"
base64 = "0.13.0"
borsh = "0.9.1"
futures = "0.3.17"
infer = { version = "0.5.0", default-features = false }
jsonwebkey = { version = "0.3.4", features = [ "pkcs-convert" ] }
log = "0.4.14"
num-bigint = { version = "0.4.2", features = [ "serde" ] }
num-traits = "0.2.14"
ring = {version = "0.16.20", features = [ "std" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.130"
serde-aux = "2.3.0"
serde_derive = "1.0.130"
serde_json = "1.0.68"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
url = "2.2.2"

